bump sbt to 1.12.14, tighten root scalacOptions, enable semanticdb